CR-2621 Fix for DOCS-114: Table layout in HTML results in large tables being hard to read

--- a/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
@@ -195,6 +195,12 @@ table {
     border-top: thin solid #ccc;
 }
 
+.table-contents td,
+.table-contents th {
+    padding: 1em;
+    vertical-align: top;
+}
+
 .table-contents thead {
     text-align: left;
 }
